# no_screenshot

./: .gitignore  .metadata  .pubignore  CHANGELOG.md  CONTRIBUTORS.md  LICENSE  README.md  plan  pubspec.yaml
.github/: PULL_REQUEST_TEMPLATE.md
android/: build.gradle  settings.gradle
coverage/: lcov.info
example/: .metadata  README.md  pubspec.yaml
ios/: no_screenshot.podspec
lib/: constants.dart  no_screenshot.dart  no_screenshot_method_channel.dart  no_screenshot_platform_interface.dart  no_screenshot_web.dart  overlay_mode.dart  screenshot_snapshot.dart  secure_navigator_observer.dart  secure_widget.dart
linux/: CMakeLists.txt  no_screenshot_plugin.cc  no_screenshot_plugin_private.h  recording_detection.cc  recording_detection.h  screenshot_detection.cc  screenshot_detection.h  screenshot_prevention.cc  screenshot_prevention.h  state_persistence.cc  state_persistence.h
linux/include/no_screenshot/: no_screenshot_plugin.h
macos/: no_screenshot.podspec
plan/: ROADMAP.md
test/: no_screenshot_method_channel_test.dart  no_screenshot_platform_interface_test.dart  no_screenshot_test.dart  no_screenshot_web_test.dart  secure_navigator_observer_test.dart  secure_widget_test.dart
test_driver/: app.dart  app_test.dart  no_screenshot_test.dart
windows/: CMakeLists.txt  no_screenshot_plugin.cpp  no_screenshot_plugin.h  no_screenshot_plugin_c_api.cpp  recording_detection.cpp  recording_detection.h  screenshot_detection.cpp  screenshot_detection.h  screenshot_prevention.cpp  screenshot_prevention.h  state_persistence.cpp  state_persistence.h
windows/include/no_screenshot/: no_screenshot_plugin_c_api.h
(+49 files in other folders)
